# Mirage

./: .gitattributes  .gitignore  LICENSE  README.md
.github/: copilot-instructions.md
App/: .gitignore  README.md  binding.gyp  build.sh  package-lock.json  package.json  run.sh  test-native.js  tsconfig.json  webpack.main.config.js  webpack.renderer.config.js
App/native/: AudioSystemWrapper.cpp  AudioSystemWrapper.h
App/src/main/: main.ts  preload.ts
App/src/renderer/: App.css  App.tsx  index.html
App/src/renderer/components/: DriftControls.css  DriftControls.tsx  EffectsPanel.css  EffectsPanel.tsx  EnvelopeControls.css  EnvelopeControls.tsx  Keyboard.css  Keyboard.tsx  MidiStatus.css  MidiStatus.tsx  SecondaryOscillatorControls.css  SecondaryOscillatorControls.tsx  Synthesizer.css  Synthesizer.tsx  (+4 more)
App/src/services/: AudioService.ts
App/src/types/: index.ts  native.d.ts
App/src/utils/: NoteCalculator.ts
audioSystem/config/: config.xml
audioSystem/src/: CMakeLists.txt
audioSystem/src/Adapters/: AudioSystemAdapter.cpp
audioSystem/src/Config/: AudioConfig.h  ConfigReader.cpp
audioSystem/src/Core/: StereoSampleRingBuffer.h  audioDevice.cpp  audioSystem.cpp  audioSystem.h
audioSystem/src/Effects/: DelayEffect.cpp  DelayEffect.h  LowPassEffect.cpp  LowPassEffect.h  OctaveEffect.cpp  OctaveEffect.h
audioSystem/src/Envelope/: ADSREnvelope.cpp  ADSREnvelope.h
audioSystem/src/Midi/: MidiDevice.cpp
audioSystem/utilities/: CMakeLists.txt  QueueThread.cpp  README.md  TimerFd.cpp  run_tests.sh  subject.cpp  test_utilities.cpp  threadBase.cpp
(+3 files in other folders)
